treewide: Update ASUS ZenFone Max Pro (M1) kernel changes (Pie)
Source version: S055
Base tag: LA.UM.7.2.r1-05300-sdm660.0

Signed-off-by: Albert I <kras@raphielgang.org>
Signed-off-by: Ahmad Thoriq Najahi <najahiii@outlook.co.id>

--- a/arch/arm/boot/dts/qcom/sdm660-qrd.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660-qrd.dtsi
@@ -248,10 +248,12 @@
 	qcom,battery-thermal-coefficients = [9d 50 ff];
 };
 
-&pm660_haptics {
+/* Huaqin modify for TT1308440 by liunianliang at 2019/05/27 start */
+/*&pm660_haptics {
 	qcom,wave-play-rate-us = <4255>;
 	qcom,vmax-mv = <1800>;
-};
+};*/
+/* Huaqin modify for TT1308440 by liunianliang at 2019/05/27 end */
 
 &i2c_2 {
 	status = "ok";
